split Facebook canvas app and github page

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   
   <div class="container footer">
     <p>
-      &copy; All rights reserved. <a href="#">Friend Clouds</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">Privacy Policy</a>&nbsp;|&nbsp;<a href="#">Terms of Use</a>
+      &copy; All rights reserved. <strong>Tempt Zone</strong>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">Privacy Policy</a>&nbsp;|&nbsp;<a href="#">Terms of Use</a>
     <p>
   </div>
 
